--- a/.gitignore
+++ b/.gitignore
@@ -46,4 +46,7 @@ Network Trash Folder
 Temporary Items
 .apdisk
 
+# Project specific files/folders
 out/**
+.idea/workspace.xml
+.idea/workspace.xml
